# kdenetwork-strigi-analyzers

./: CMakeLists.txt  Makefile.am  RETURNED_ITEMS
rfc822/: kfile_rfc822.cpp  kfile_rfc822.desktop
torrent/: CMakeLists.txt  Makefile.am  Messages.sh  README  bbase.h  bdict.cpp  bdict.h  bint.cpp  bint.h  blist.cpp  blist.h  bstring.cpp  bstring.h  bytestream.cpp  bytestream.h  bytetape.cpp  bytetape.h  kfile_torrent.cpp  kfile_torrent.desktop  kfile_torrent.h  torrent_analyzer.cpp  torrent_analyzer.h  torrent_analyzer_factory.cpp  torrent_analyzer_factory.h
vcf/: kfile_vcf.desktop
